Templates for each category

--- a/single-post.html
+++ b/single-post.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>TheGazette - News Magazine HTML5 Template | Single Post</title>
+    <title>Single Post</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -237,7 +237,7 @@
                             <div class="gazette-post-tag">
                                 <a href="#">Editorial</a>
                             </div>
-                            <h2 class="font-pt">Move over, bitcoin.Here comes litecoin</h2>
+                            <h2 class="font-pt">New Title</h2>
                             <p>March 29, 2016</p>
                         </div>
                     </div>
@@ -262,7 +262,7 @@
                     </div>
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p>Suspendisse scelerisque tellus convallis tortor posuere, ut commodo diam blandit. Morbi vel nulla non turpis luctus tempor eu eu urna. Aliquam in lorem a augue mollis volutpat. Nunc iaculis rutrum enim nec viverra. Morbi eleifend metus id tellus luctus, ac porta orci imperdiet.</p>
+                            <p>News. .....</p>
                             <p>Morbi efficitur ligula a efficitur mollis. Suspendisse vitae sapien vitae urna eleifend dapibus ut non tortor. In nec metus ac mi ultrices commodo interdum et lacus. Suspendisse potenti. Suspendisse interdum semper dolor nec posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut orci non tortor pretium hendrerit at vel massa. Nunc ut fermentum felis. </p>
                         </div>
                     </div>
