--- a/tech/single-post.html
+++ b/tech/single-post.html
@@ -240,7 +240,7 @@
                         <div class="single-post-title-content">
                             <!-- Post Tag -->
                             <div class="gazette-post-tag">
-                                <a href="#">Politics</a>
+                                <a href="#">Tech</a>
                             </div>
                             <h2 class="font-pt">新闻标题 News Title</h2>
                             <p>March 7, 2021</p>
