--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -347,11 +347,12 @@
                                 <hr>
                             </div>
                             <div class="col-12 col-lg-12">
-                                <p>2021年1月18日~24日一周疫情简报：
-                                <p>— 威斯康星州疫情增长有所减缓，目前病例总数超过53.3万例，周内新增1.1万例（上周为1.5万例），平均每日增长约1500例；累计死亡5699人，周内新增死亡人数大幅减少，为129人（上周为408人）。新增病例数目最多的地区包括密尔沃基市（密尔沃基郡新增1887）、沃基肖市（沃基肖郡新增766）、麦迪逊市（戴恩郡新增763）、绿湾市（布朗郡新增554），其他郡的一周增长数目均在500人以下；就新增病例人口密度而言，威州西北部地区相对较高。
-                                <p>— 戴恩郡（包括麦迪逊市）疫情增长有所减缓，目前病例总数超过3.7万例，周内新增775例（上周为984例），平均每日增长111例；检测阳性率波动下降，一周平均水平由3.8%降至2.2%左右。戴恩郡新冠住院病人数目最近一周内有所下降，由80人降至目前的76人；重症病房新冠病人数目最近一周内有所下降，由25人降至目前的20人；累计死亡228人，本周内新增10人（稍高于上周的7人）。
-                                <p>— 基于一周内的新增数目在总人口中的比例，本周内戴恩郡新增病例高发地区包括：戴恩郡北部边界附近大片乡村区域、Lake Mendota东北部沿岸的Maple Bluff、Lake Monona西北部沿岸区域、UW橄榄球场西侧至校医院南侧大片区域、Verona市北部、戴恩郡东部和南部大片乡村区域。详情请查看所附地图或电子版信息平台。
-                                <p>— 威斯康星大学麦迪逊分校官方疫情信息平台今日起恢复更新。目前校园累计阳性总数为5735人（学生5090人，职工645人）。本周内共增加阳性96人（上周为74人，上升30%），包括学生76人（上周为54人，上升41%）、职工20人（上周为20人，相同）。在校内检测中，学生的一周平均阳性率为2.2%（大大高于上周的1.4%），职工为1.2%（高于上周的1.0%）。
+                                <p>2021年3月8日~14日一周疫情简报：
+                                <p>— 威斯康星州疫情增长稍有加快，目前病例总数为569932例，周内新增3061例（上周为2603例），平均每日增长437例；累计死亡6536人，周内新增死亡55人（上周为69人）。新增病例数目最多的地区包括麦迪逊市（戴恩郡新增359）、密尔沃基市（密尔沃基郡新增354）、沃基肖市（沃基肖郡新增294），其他郡的一周增长数目均在200人以下；就新增病例人口密度而言，威州西北部与南部地区相对较高。
+                                <p>— 戴恩郡（包括麦迪逊市）疫情增长稍有减慢，目前病例总数为41179例，周内新增358例（上周为445例），平均每日增长51例，检测阳性率在0.7-0.8%左右。戴恩郡新冠住院病人数目最近一周内由18人波动升至21人；重症病房新冠病人数目由10人波动降至7人；累计死亡280人，本周内新增2人（低于上周的5人）。
+                                <p>— 目前戴恩郡已接种疫苗总数超过22.3万剂。接种至少一剂疫苗的人数为140441人，占总人口25.7%，其中18~24岁人口中接种至少一剂疫苗的比例为11.2%，25~34岁人口为21.3%，亚洲人为11.5%；完成接种疫苗的人数为82701人，占总人口的15.1%，其中18~24岁人口中完成接种疫苗的比例为4.6%，25~34岁人口为8.5%，亚洲人为5.6%；详情见州卫生部门网页。
+                                <p>— 基于新增病例数目在人口中的比例，本周戴恩郡新增病例的空间分布情况如下：UW校园附近疫情有大幅缓解，目前主要集中学校东南的Kohl Center附近街区，其他高风险地点包括Lake Monona南岸、戴恩郡西北边界等地，详情请查看所附地图或电子版信息平台。
+                                <p>— 威斯康星大学麦迪逊分校本周内疫情有大幅缓解。目前校园累计阳性总数为7326人（学生6550人，职工776人）。本周内共增加阳性67人（上周为127人，减少了47%），包括学生59人（上周为110人，减少了46%）、职工8人（上周为17人，减少了53%）。在校内检测中，学生的一周平均阳性率为0.2%（稍低于上周的0.3%），职工为0.1%（稍低于上周的0.2%）。目前校内公寓中，新冠感染者的隔离（Isolation）人数为21人，较上周的22人相比减少了5%；预防性隔离（Quarantine）人数为9人，较上周的18人相比减少了50%。目前接种至少一剂疫苗的师生人数为6143人（占师生总人口的9.5%），本周内增加1037人。7人。
                                 <p>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大新冠疫情信息平台；每周一发布于“麦迪讯”微信公众号：Madison_news）</p>
                                 <br><br><br><br>
                             </div>
