--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -352,7 +352,7 @@
                                 <p>— 戴恩郡（包括麦迪逊市）疫情增长稍有减慢，目前病例总数为41179例，周内新增358例（上周为445例），平均每日增长51例，检测阳性率在0.7-0.8%左右。戴恩郡新冠住院病人数目最近一周内由18人波动升至21人；重症病房新冠病人数目由10人波动降至7人；累计死亡280人，本周内新增2人（低于上周的5人）。
                                 <p>— 目前戴恩郡已接种疫苗总数超过22.3万剂。接种至少一剂疫苗的人数为140441人，占总人口25.7%，其中18~24岁人口中接种至少一剂疫苗的比例为11.2%，25~34岁人口为21.3%，亚洲人为11.5%；完成接种疫苗的人数为82701人，占总人口的15.1%，其中18~24岁人口中完成接种疫苗的比例为4.6%，25~34岁人口为8.5%，亚洲人为5.6%；详情见州卫生部门网页。
                                 <p>— 基于新增病例数目在人口中的比例，本周戴恩郡新增病例的空间分布情况如下：UW校园附近疫情有大幅缓解，目前主要集中学校东南的Kohl Center附近街区，其他高风险地点包括Lake Monona南岸、戴恩郡西北边界等地，详情请查看所附地图或电子版信息平台。
-                                <p>— 威斯康星大学麦迪逊分校本周内疫情有大幅缓解。目前校园累计阳性总数为7326人（学生6550人，职工776人）。本周内共增加阳性67人（上周为127人，减少了47%），包括学生59人（上周为110人，减少了46%）、职工8人（上周为17人，减少了53%）。在校内检测中，学生的一周平均阳性率为0.2%（稍低于上周的0.3%），职工为0.1%（稍低于上周的0.2%）。目前校内公寓中，新冠感染者的隔离（Isolation）人数为21人，较上周的22人相比减少了5%；预防性隔离（Quarantine）人数为9人，较上周的18人相比减少了50%。目前接种至少一剂疫苗的师生人数为6143人（占师生总人口的9.5%），本周内增加1037人。7人。
+                                <p>— 威斯康星大学麦迪逊分校本周内疫情有大幅缓解。目前校园累计阳性总数为7326人（学生6550人，职工776人）。本周内共增加阳性67人（上周为127人，减少了47%），包括学生59人（上周为110人，减少了46%）、职工8人（上周为17人，减少了53%）。在校内检测中，学生的一周平均阳性率为0.2%（稍低于上周的0.3%），职工为0.1%（稍低于上周的0.2%）。目前校内公寓中，新冠感染者的隔离（Isolation）人数为21人，较上周的22人相比减少了5%；预防性隔离（Quarantine）人数为9人，较上周的18人相比减少了50%。目前接种至少一剂疫苗的师生人数为6143人（占师生总人口的9.5%），本周内增加1037人。
                                 <p>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大新冠疫情信息平台；每周一发布于“麦迪讯”微信公众号：Madison_news）</p>
                                 <br><br><br><br>
                             </div>
