--- a/about-us.html
+++ b/about-us.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>TheGazette - News Magazine HTML5 Template | About Us</title>
+    <title>麦迪讯 Madnews | About Us</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -187,22 +187,22 @@
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Politics</a>
+                                            <a class="nav-link" href="#">首页 Home</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Lifestyle</a>
+                                            <a class="nav-link" href="#">介绍 About</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Travel</a>
+                                            <a class="nav-link" href="#">活动 Event</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Health</a>
+                                            <a class="nav-link" href="#">新闻 News</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Entertainment</a>
+                                            <a class="nav-link" href="#">文章 Article</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">sport</a>
+                                            <a class="nav-link" href="#">疫情 Covid</a>
                                         </li>
                                     </ul>
                                     <!-- Search Form -->
@@ -232,7 +232,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="breacumb-content d-flex align-items-center justify-content-between">
-                        <h3 class="font-pt mb-0">About Us</h3>
+                        <h3 class="font-pt mb-0">关于我们 About Us</h3>
                         <p class="editorial-post-date text-dark mb-0">28 November 2017</p>
                     </div>
                 </div>
@@ -246,13 +246,25 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="font-pt mb-30">Sort History</h3>
+                        <h3 class="font-pt mb-30">社团介绍 Introduction</h3>
                     </div>
                     <div class="col-12 col-md-6">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam congue placerat finibus. Fusce a enim non erat faucibus pellentesque. Ut mattis vel leo sit amet tincidunt. Sed placerat condimentum ante vitae ornare. Nam nibh leo, pharetra vel lacus in, dictum tincidunt magna. Aliquam ut placerat justo. Duis elementum justo in sapien auctor, ut placerat purus sodales. Pellentesque a risus eu elit scelerisque fermentum in sed nisi. Sed maximus vel lectus sit</p>
+                    </a><b>概况 Intro</b></a>
+                        <p>随着麦迪讯的发展，我们涉及的领域不断扩大。作为一个不断壮大的新媒体平台，我们现在立志于分享留学生的观点，增进中美年轻人之间的相互理解。现在我们社团已经包含了微信公众号，Facebook，BiliBili，喜马拉雅等平台，并且囊括了麦迪讯，新闻简讯，专栏，读书会等栏目，内容也从时事政治扩大到了金融，文学等领域。</p>
                     </div>
                     <div class="col-12 col-md-6">
-                        <p>amet rhoncus. Vestibulum ut mattis mi, ac aliquam turpis. Suspendisse potenti. In semper nec urna sed mattis. Vivamus augue tellus, placerat nec lectus a, sodales sollicitudin arcu. enean a porta sem. In a nunc sapien. Aliquam justo augue, ornare eu mauris varius, scelerisque consequat purus. Ut semper ac neque eu cursus. Cras pellentesque quam vel metus bibendum, ac fringilla tellus tempus.</p>
+                        </h4><b>历史 History</b></h4>
+                        <p>麦迪讯成立于2019年秋季，是一个开放，包容，和谐，奋进的新媒体社团。目前我们社团的公众号关注人数已经达到三千人以上。我们社团成立的初衷是为了服务麦迪逊当地的华人学生，为他们带来本地和国际的要闻。</p>
+                    </div>
+                    <div><br></br></div>
+                    <div>
+                        </h4><b>社长寄语 Message</b></h4>
+                        <p style="font-size:16px">朋友，欢迎在寒冷的冬夜敲开麦迪讯的门，这里有温暖的火炉和大群愿意和你促膝谈心的思考者。从这里，一场场观点的交锋，一篇篇犀利的文章将飞向世界的每个角落，在墙内墙外，中国和美国之间的太平洋上架起一道讯息的桥梁。</p>
+                        <p style="font-size:16px">麦迪讯通讯社由威斯康辛大学麦迪逊分校的一群中国留学生创建，相比做个纯粹的“做题家”，我们更愿意思考一些问题，比如，在无知的成本越来越低的时代，我们该如何让自己和身边的人冷静地看待这个世界的变化，并且使得这些变化给每个人带来心智上的成熟而不是退化？</p>
+                        <p style="font-size:16px">我们不想停留在感慨的阶段，我们决定办一个小小的通讯社，从报道每天的新闻做起，在实践中去探寻那些宏大问题的答案。渐渐地，开始有人支持我们的事业，我们也不满足于做新闻的搬运工，而是渴望成为思想的传播者，搭建起一个自由的公民讨论平台。</p>
+                        <p style="font-size:16px">在一个深刻变化的时代，做新闻的体验就像一场海上冒险。我们在一个又一个舆论场的漩涡中挣扎着前进，各种各样的信息汇聚成一股股恶浪向我们汹涌扑来，身边随时有人丧失了理智，被卷进了深渊。我们麦迪讯这艘小船在各种虚假的信息和极端的情绪中颠簸，把领航灯高高挂起。面对亮得扎眼真相，很多人选择扭过头去，可我们还是要大声疾呼：看，真相在那里呢！你们好歹看一眼啊！当然，有时执着换来的是徒劳无功，我们碰了很多次南墙。在许多次的“违反有关规定被屏蔽后“，我终于知道，有的时候成就深刻思想，不光要看自己的努力，还要看历史的机遇（审查员是否在打瞌睡）。</p>
+                        <p style="font-size:16px">终于，我们不用和这堵墙死磕了，我们有了自己的网站。在这个网站上，我们将为大家呈现更加多元的麦迪逊本地和世界新闻，鼓励更加坦率的观点交流。请各位用一种更加开放的心态去浏览它。因为我们不仅仅要摧毁有形的墙，还要摧毁制约我们思考的“头脑中的墙”。我们不能再用自我审查的方式去观察这个世界了。当自由掌握在你手上的时候，要认真地使用它。</p>
+                        <p style="font-size:16px">如果你觉得我们的新闻和评论有可取之处，并且愿意和我们进一步交流看法的话，请在我们的评论区留言。如果你愿意加入我们的事业，那 你将会拥有最好的工作体验，因为你的同仁们都是一批涉世未深的年轻人，他们还不太懂得人情世故和尔虞我诈，这些人真诚地希望从彼此的身上学习到一些优点，并渴望寻找到在未来的人生的道路上可以合作的伙伴。所以，如果你恰好也是这样一位“真心英雄”，请把你的手伸给我们吧。</p>
                     </div>
                 </div>
             </div>
@@ -262,75 +274,161 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="font-pt mb-50">Our Team</h3>
+                        <h3 class="font-pt mb-50">社团成员 Our Team</h3>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-12 col-sm-6 col-md-3">
                         <div class="single-team-area">
-                            <img src="img/bg-img/t1.jpg" alt="">
+                            <img src="img/members-img/skx.jpg" alt="">
                             <div class="team-member-data">
-                                <h4 class="font-pt">Jane Doe</h4>
+                                <h4 class="font-pt">孙可欣</h4>
                                 <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                    <h5 class="font-pt mb-0">Editor</h5>
-                                    <div class="social-info">
-                                        <a href="#"><i class="fa fa-pinterest"></i></a>
-                                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                    </div>
+                                    <h5 class="font-pt mb-0">创始人、前任社长</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3">
                         <div class="single-team-area">
-                            <img src="img/bg-img/t2.jpg" alt="">
+                            <img src="img/members-img/ylh.jpg" alt="">
                             <div class="team-member-data">
-                                <h4 class="font-pt">Jane Doe</h4>
+                                <h4 class="font-pt">袁立豪</h4>
                                 <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                    <h5 class="font-pt mb-0">Editor</h5>
-                                    <div class="social-info">
-                                        <a href="#"><i class="fa fa-pinterest"></i></a>
-                                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                    </div>
+                                    <h5 class="font-pt mb-0">社长、编辑</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3">
                         <div class="single-team-area">
-                            <img src="img/bg-img/t3.jpg" alt="">
+                            <img src="img/members-img/twz.jpg" alt="">
                             <div class="team-member-data">
-                                <h4 class="font-pt">Jane Doe</h4>
+                                <h4 class="font-pt">滕文哲</h4>
                                 <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                    <h5 class="font-pt mb-0">Editor</h5>
-                                    <div class="social-info">
-                                        <a href="#"><i class="fa fa-pinterest"></i></a>
-                                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                    </div>
+                                    <h5 class="font-pt mb-0">编辑</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3">
                         <div class="single-team-area">
-                            <img src="img/bg-img/t4.jpg" alt="">
+                            <img src="img/members-img/thl.jpg" alt="">
                             <div class="team-member-data">
-                                <h4 class="font-pt">Jane Doe</h4>
+                                <h4 class="font-pt">陶翰林</h4>
                                 <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                    <h5 class="font-pt mb-0">Editor</h5>
-                                    <div class="social-info">
-                                        <a href="#"><i class="fa fa-pinterest"></i></a>
-                                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                    </div>
+                                    <h5 class="font-pt mb-0">编辑</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/cmf.jpg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">陈牧帆</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">美编、编辑</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/gcx.jpg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">郭晨晓 Atlas</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">技术</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/wxl.jpg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">王旭黎</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">财务</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/hry.jpg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">何瑞阳</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">财务、编辑</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/wyx.jpg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">王衍翔</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">编辑</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/yxp.jpg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">杨小霈</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">特约编辑</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/cjx.jpg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">陈建旭</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">编辑</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/xty.jpg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">肖天倚</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">美编、编辑</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/gym.jpg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">郭一民</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">特约编辑、美编</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/ywx.jpg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">杨雯熙</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">美编、技术</h5>
                                 </div>
                             </div>
                         </div>
