--- a/business/single-post.html
+++ b/business/single-post.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>麦迪讯 | 新闻标题 News Title</title>
+    <title>麦迪讯 | 新闻标题 有点像朋友圈？浅谈比特币交易系统的设计</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="../img/core-img/logo.jpg">
@@ -242,8 +242,8 @@
                             <div class="gazette-post-tag">
                                 <a href="#">Business</a>
                             </div>
-                            <h2 class="font-pt">新闻标题 News Title</h2>
-                            <p>March 7, 2021</p>
+                            <h2 class="font-pt">有点像朋友圈？浅谈比特币交易系统的设计</h2>
+                            <p>January 25, 2021</p>
                         </div>
                     </div>
                 </div>
@@ -255,22 +255,57 @@
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p>新闻正文第一段</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum nunc libero, vitae rutrum nunc porta id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam arcu augue, semper at elementum</p>
-                            <p>nec, cursus nec ante. Vestibulum sed velit scelerisque elit posuere vulputate vel viverra quam. Curabitur laoreet aliquam diam, non mattis arcu feugiat sed. Sed eget pellentesque lacus. Pellentesque in diam vel mauris pretium commodo a ac magna. Suspendisse scelerisque tellus convallis tortor posuere, ut commodo diam blandit. Morbi vel nulla non turpis luctus tempor eu eu urna. Aliquam in lorem a augue mollis volutpat. Nunc iaculis rutrum enim nec viverra. Morbi eleifend metus id tellus luctus, ac porta orci imperdiet.</p>
-                            <p>Morbi efficitur ligula a efficitur mollis. Suspendisse vitae sapien vitae urna eleifend dapibus ut non tortor. In nec metus ac mi ultrices commodo interdum et lacus. Suspendisse potenti. Suspendisse interdum semper dolor nec posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut orci non tortor pretium hendrerit at vel massa. Nunc ut fermentum felis.</p>
+                            <p>比特币交易系统类似微信朋友圈？</p>
+                            <p>写在前面</p>
+                            <p>刚刚过去的2020年比特币价格暴涨，投机气氛甚浓。笔者近日试图去理解与思考比特币交易系统的设计思路，其价值来源于哪里，长期而言比特币的前景如何等问题，并将自己近日所了解到的东西记录下来，写成了两篇文章。本文是第一篇，试图用最通俗的语言解释比特币交易系统是如何运转的。第二篇将会讨论比特币的价值来源以及其前景，届时笔者将会拿比特币与黄金、微信支付/支付宝等电子支付、以及央行研究中的法定数字货币（DCEP）三者做对比和分析，同时笔者也将就比特币是否是庞氏骗局谈谈自己的看法。笔者自己也是门外汉，倘若说得有不恰当之处，还请您多包涵！</p>
+                            <p>从小红用微信支付买糖葫芦开始说起</p>
+                            <p>要解释比特币，不妨从小红用微信支付买糖葫芦开始说起。打工人小红最近手头有点紧，她微信钱包里只剩2块钱了。小红下班后在路边摊毅然决然地拿这剩下的2元买了个糖葫芦。她用微信扫码转给摊主了2元，摊主确认收款以后便把糖葫芦拿给了她。在电子支付大规模普及的今天，这看似再正常不过的交易，其实有四个点需要特别指出：</p>
+                            <p>1. 小红只能花她自己微信钱包里的钱。她无法自行操作用同事小明钱包里的钱给她的糖葫芦买单，除非小明愿意请客。</p>
+                            <p>2. 小红微信钱包里原本只有2块钱了，那么她最多也只能花掉2块，她买不起5块的糖葫芦（不考虑赊账和借贷）。</p>
+                            <p>3. 小红这2块只能花一次，花出去之后她的手机上显示的余额就得减2。</p>
+                            <p>4. 小红无法任凭她自己的意愿收回这已经花出去的2块钱。</p>
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="single-post-thumb">
-                            <img src="img/1.jpg" alt="">
+                            <img src="image2.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum nunc libero, vitae rutrum nunc porta id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam arcu augue, semper at elementum</p>
-                            <p>nec, cursus nec ante. Vestibulum sed velit scelerisque elit posuere vulputate vel viverra quam. Curabitur laoreet aliquam diam, non mattis arcu feugiat sed. Sed eget pellentesque lacus. Pellentesque in diam vel mauris pretium commodo a ac magna. Suspendisse scelerisque tellus convallis tortor posuere, ut commodo diam blandit. Morbi vel nulla non turpis luctus tempor eu eu urna. Aliquam in lorem a augue mollis volutpat. Nunc iaculis rutrum enim nec viverra. Morbi eleifend metus id tellus luctus, ac porta orci imperdiet.</p>                            
-                            <p>Morbi efficitur ligula a efficitur mollis. Suspendisse vitae sapien vitae urna eleifend dapibus ut non tortor. In nec metus ac mi ultrices commodo interdum et lacus. Suspendisse potenti. Suspendisse interdum semper dolor nec posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut orci non tortor pretium hendrerit at vel massa. Nunc ut fermentum felis. </p>
+                            <p>这看似平淡无奇的四点，在现金交易的模式下会自然而然的满足（只能花自己兜里的钞票；钞票没有办法无中生有；花出去2块钱的钞票，兜里自然就少了这2块；花出去的钞票便收不回来了）。而在此次糖葫芦交易过程中，因为是电子支付，这四点则需要依靠微信支付平台（或者支付宝、银行等）这种第三方管理者来确保。</p>
+                            <p>那么能不能设计一种直接点对点（没有支付宝、微信支付、银行等等）的电子支付模式呢？这便是比特币的设计者中本聪（化名，真实身份未知）当初思考的问题：去中心化，即让电子支付在没有第三方管理者的情况下依然能公正有序进行。比特币交易系统要达到这个目标，就要在没有第三方（管理员）的情况下依然能确保以上四点。我们姑且称这四点为比特币系统需要解决的四大难题。</p>                            
+                            <p>虽然比特币的技术较为复杂，但其原则是：在没有第三方管理者来作为交易系统的权威的情况下，所有人都应当监督这个交易系统，大家的共识（需要半数以上的人同意才能达成共识）就是权威。</p>
+                            <p>中本聪提出的比特币交易系统就好比微信的朋友圈，我们姑且称之为比特币朋友圈。每个持有比特币的人相互之间都是好友，他们都能在比特币朋友圈里看见任何一个人发的动态。与微信朋友圈里晒生活、卖货、分享知识等不同的是，比特币朋友圈里发的动态全是用户之间的交易信息。比如小红要转给小明5个比特币，那么小红就得发一条动态：“小红转给小明5个比特币”，以此告知全体用户此次交易。</p>
+                            <p>那么如果每次交易都要有人发一条动态的话，这个比特币朋友圈势必让人目不暇接。信息多了就要有人去整理，去把这些信息规整到一起，这里我们就要引入另一个概念：比特币大账本。比特币朋友圈里所有有效的转账信息都会被记录到这个比特币大账本里（任何人都能随意查看账本里的内容）。因为这个系统中没有管理员，所以只能靠一些用户自发来做记账员。当然啦，也不白干，每写满一页记账纸，将其并入大账本之后就能拿几个比特币，这个过程就叫挖矿。不过这件事可远远没有听起来这么容易，这点笔者稍后就会加以解释。大家一定听说过区块链这个词吧，这里的比特币大账本便是传说中的区块链，而账本的每一页便是一个区块，记满了以往大家确认过的交易信息。一条交易一旦进入比特币大账本，便成为大家都认证过的交易，不能再被修改（理论上其实也能，只不过难如登天，笔者在讨论难题四时会解释）。</p>
+                            <p>那么有了比特币交易系统的基本框架（比特币朋友圈和大账本），我们可以来解释该系统是如何解决上面提到的四大难题了。</p>
+                            <p>难题一：只能花自己电子钱包里的钱</p>
+                            <p>在使用比特币的交易过程中，每个人都将拥有自己独一无二的签名。同时，交易系统中的所有人都相互认识其他人的签名。更重要的是，每个人签名是如此的独特而且复杂以至于其他任何人、任何电脑都无法仿制。</p>
+                            <p>在以上糖葫芦交易过程中，如果小红要用比特币来支付，那么她需要发一条动态，告诉比特币交易系统中的所有人：“小红转账给糖葫芦摊主2个比特币”，同时她还必须附加上自己独一无二的签名。其他人一看这个签名，就知道这一定是小红亲自发的消息，假不了。相反，假如小红想用小明的钱给自己买单，她发了一条：“小明转账给糖葫芦摊主2个比特币”，并且模仿了小明的签字。但是因为其他人都认识小明的签字，也都知道其签名不可能被模仿，那么小红的这一波操作便尴尬了。</p>
+                            <p>难题二：钱包里有多少，最多就只能花多少</p>
+                            <p>就是因为有比特币大账本的存在，任何人钱包里的余额都可以被核实。举个例子，假设比特币大账本里目前为止涉及小红的转账信息共有3条，分别如下：</p>
+                            <p>1. 王总转给小红10比特币，2020年12月31日</p>
+                            <p>2. 小红转给小明3比特币，2021年1月5日</p>
+                            <p>3. 小红转给房东5比特币，2021年1月21日</p>
+                            <p>那么大家一算就知道小红现在的电子钱包里只有2个比特币了。如果小红这时候在比特币朋友圈里发一条动态：“小红转账给糖葫芦摊主5个比特币”，那么即使小红附上了自己独有的签名，这条交易仍然不会得到大家的认可，因为大家都知道她余额不足了。</p>
+                            <p>读到这里，有读者很可能就会开始质疑比特币体系的隐私保护：要是人人都能看见我钱包余额，知道我囊中羞涩，那多丢人啊。其实笔者只是为了简化问题而举了这么个例子，真实的比特币交易有它独有的机制来保护用户隐私。</p>
+                            <p>难题三：不能有双重支付</p>
+                            <p>不能有双重支付换句话说就是一笔钱不能花两次。</p>
+                            <p>比特币朋友圈中的转账动态从发出到被记入大账本之间会有一小段时间，小红转给糖葫芦摊主的2元只有被记入了大账本以后，所有人才会认定该交易已经发生，小红的余额才会因此降成0。</p>
+                            <p>这时候等待自己动态被记入大账本的小红灵机一动，又发一条比特币朋友圈：“小红转账给煎饼果子摊主2个比特币”，并且附上了自己独有的签名。那么小红能不能成功地把这一笔钱当两笔花呢？</p>
+                            <p>答案自然是否定的，比特币的设计者当然也考虑到了这种情况。我们已经知道比特币朋友圈中的转账信息是要有人整理的，假如小郭正在做这项工作，他在比特币朋友圈上先看到了“小红转账给糖葫芦摊主2个比特币”这条动态。在确认过该转账合理后（核对小红签名、查看小红钱包余额够不够），小郭将这次交易写在了记账纸上，并接着记录其他转账信息。如果小郭随后看到了第二条动态“小红转账给煎饼果子摊主2个比特币”，那么他将会以余额不够为由拒绝收纳此条动态。</p>
+                            <p>当然啦，整理比特币朋友圈里转账信息的人可远不止小郭一个，毕竟这活有比特币拿，所以有很多人愿意干。假设小陈也在整理，然而不同于小郭，他先看到并核对了“小红转账给煎饼果子摊主2个比特币”这条交易信息，并写到了自己的记账纸上。那么这时就要看小郭和小陈谁先成功把自己的记账纸并入比特币大账本了（并入大账本这个过程非常困难，记账人99%甚至更多的时间可能都耗在了这里，笔者稍后会有详细解释）。假如小郭运气好，成功地在小陈和其他所有人之前把自己的记账纸并入比特币大账本，那么“小红转账给糖葫芦摊主2个比特币”便成为被认证过的交易。这时候小陈和其他人都要把自己记账纸中与小郭有矛盾的部分或者重复的部分删除，然后接着尝试把自己的整理的结果放入大账本。</p>
+                            <p>与此同时，所有人都在依靠比特币大账本判断对方是否已经付款。糖葫芦摊主只有在大账本里看到了“小红转账给糖葫芦摊主2个比特币”，才会把糖葫芦交给小红。而这样一来，煎饼果子摊主便不会看到小红给自己转账的消息，于是小红一笔钱花两次的计划便泡汤了。这便是比特币交易系统如何防止双重支付的。</p>
+                            <p>难题四：钱一旦花出去了，就无法任由自己的意志而收回</p>
+                            <p>你一定很奇怪，为什么记账人写满一张记账纸倒不怎么费时间，而并入大账本这个过程却非常困难呢？我们举个例子说明。假设小郭自愿给大家整理转账信息，他从比特币朋友圈里收集了100条动态，确认了每一条交易信息的合理性之后（核对转账人签名、查看转账人钱包余额够不够）。他很快便把这100条动态写到了一张纸上，但在把这张纸并入比特币大账本之前，小郭还必须去摇转盘（如下图所示），只有指针停在红色区域的时候，他才能顺利把自己整理的那张纸并入比特币大账本，使其成为大账本新的一页。</p>
+                            <p>只有指针停在红色小扇形区域内，记账员才可以将记账纸放入大账本</p>
+                            <p>那么你肯定会问了，这不得转个几百次才能转到红色区域？其实何止几百次，红色区域其实应当比图示里面还小得多，只不过那样的话读者们就都看不见了。这就是为什么比特币挖矿这么难了，不是技巧上有多难，只是你得不停地试。小郭有可能转几年也转不到红色区域。那这么设计的意义是什么呢？是为了防止有人篡改以往交易记录。</p>
+                            <p>因为比特币系统是去中心化的，没有一个管理者。为了维护这个系统的秩序，比特币大账本便不能说改就改、谁想改动就能改动。再回到小红的例子。假设小红买了糖葫芦以后钱包空空如也，她回家后有点后悔了。这时她去翻看已经积累了34页的比特币大账本，发现自己的那条交易记录“小红转账给糖葫芦摊主2个比特币”在第30页。她试图把这条记录改成“小红转账给糖葫芦摊主1个比特币”，以此来给自己收回1个比特币。可是她一旦在第30页上做以改动，她就要把从30页到34页这四页的记账工作重做一遍（这就意味着她也要转转轮，并且要成功地让转轮指针停在红色区域5次！）。岂止如此，小红重做30页到34页这四页的记账工作的时候，别的记账人可没闲着，他们还在接着做35页、36页等等。除非小红能赶上并且超越其他所有记账人联合起来的进度，否则小红在第30页所做的改变将永远不会被承认（这是因为比特币交易系统只承认页数最多的大账本）。但倘若小红真的有那样的运气和毅力，那她则会去当记账员，因为记账员的报酬（挖矿所得的比特币）可比她修改以往交易记录所能得到的要多得多。</p>
+                            <p>我们再回到比特币系统的原则：在没有一个管理员作为权威的情况下，需要所有人都能够监督这个交易系统，大家的共识（需要半数以上的人同意才能达成共识）就是权威。只要有半数以上的人坚持只承认页数最多的大账本，那么小红无论如何也没有能力去篡改比特币大账本上的内容了，难题四便是如此解决的。</p>
+                            <p>写在最后</p>
+                            <p>至此我们解释了比特币交易系统如何在没有“管理员”的情况下确保电子支付的四个要点，比特币作为去中心化货币的设计思路便是如此。以上这些解释自然不是百分之百准确，但笔者认为已经涵盖了关键点。比特币系统里每个用户的电子签名并不是什么真正意义上的签名，而是一大串二进制的数字。但是这些数字要达到的效果却是和普通签名类似：独一无二且无法仿制。而实际上的比特币挖矿并不是要去转转盘，而是要解数学题。另外也不是人工在解题，而是计算机在不停地算。但两者本质类似，都是要不停地试很多很多很多次才能成功。</p>
+                            <p>其实比特币交易系统何止是摆脱了微信支付、支付宝、银行这些第三方管理者，任何一个国家的政府或者中央银行都无法管控比特币的发行和流通，就连比特币的缔造者中本聪也无法干预。去中心化是比特币最大的亮点，但同时也是比特币成为真正意义上货币的最大阻碍，因为这个特点很难让比特币取得各个国家官方的支持。此外，由于不易监管，比特币也为不法分子从事违法犯罪活动（如洗钱）提供了可乘之机。正因如此，比特币的前景充满了不确定性，包括我国在内的一些国家已经在很大程度上限制了比特币。但是比特币背后的区块链技术却是一大创新，可以广泛应用于多个领域来解决信任问题，对笔者大有启发。</p>
+                    
                         </div>
                     </div>
                     <div class="col-12 col-md-10">
@@ -282,7 +317,7 @@
                     </div>
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p>Suspendisse vitae sapien vitae urna eleifend dapibus ut non tortor. In nec metus ac mi ultrices commodo interdum et lacus. Suspendisse potenti. Suspendisse interdum semper dolor nec posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut orci non tortor pretium hendrerit at vel massa. Nunc ut fermentum felis.</p>
+                            <p>本文是针对比特币交易系统的设计思路加以讨论，谢谢您的耐心阅读！下次笔者将就比特币成为货币或者黄金替代品的前景做一些定性分析，敬请期待。</p>
                         </div>
                     </div>
                 </div>
