Home page menu links

--- a/index.html
+++ b/index.html
@@ -176,38 +176,38 @@
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">目录 Pages</a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                <a class="dropdown-item" href="../index.html">首页 Home</a>
-                                                <a class="dropdown-item" href="../catagory.html">分类 Category</a>
-                                                <a class="dropdown-item" href="../about-us.html">介绍 About</a>
-                                                <a class="dropdown-item" href="../contact.html">平台 Platform</a>
+                                                <a class="dropdown-item" href="index.html">首页 Home</a>
+                                                <a class="dropdown-item" href="catagory.html">分类 Category</a>
+                                                <a class="dropdown-item" href="about-us.html">介绍 About</a>
+                                                <a class="dropdown-item" href="contact.html">平台 Platform</a>
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">政治 Politics</a>
+                                            <a class="nav-link" href="politics/the_eighteenth_brumaire_of_donald_trump_1.html">政治 Politics</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">财经 Business</a>
+                                            <a class="nav-link" href="business/single-post.html">财经 Business</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">教育 Education</a>
+                                            <a class="nav-link" href="education/single-post.html">教育 Education</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">社会 Society</a>
+                                            <a class="nav-link" href="society/Tokyo_Olympics.html">社会 Society</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">科技 Tech</a>
+                                            <a class="nav-link" href="tech/single-post.html">科技 Tech</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">体育 Sport</a>
+                                            <a class="nav-link" href="sport/single-post.html">体育 Sport</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">娱乐 Entertainment</a>
+                                            <a class="nav-link" href="entertainment/single-post.html">娱乐 Entertainment</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">新闻评论 News</a>
+                                            <a class="nav-link" href="news/single-post.html">新闻评论 News</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">疫情 Pandemic</a>
+                                            <a class="nav-link" href="pandemic/pandemic.html">疫情 Pandemic</a>
                                         </li>
                                     </ul>
                                     <!-- Search Form -->
