--- a/about-us.html
+++ b/about-us.html
@@ -9,10 +9,10 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>麦迪讯 Madnews | About Us</title>
+    <title>麦迪讯 MADNEWS | 关于我们 About Us</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/core-img/logo.jpg">
 
     <!-- Core Style CSS -->
     <link rel="stylesheet" href="css/core-style.css">
@@ -151,7 +151,7 @@
                     <!-- Logo Area -->
                     <div class="col-12 col-md-4">
                         <div class="logo-area">
-                            <a href="index.html"><img src="img/core-img/logo.png" alt="logo"></a>
+                            <a href="index.html"><img src="img/core-img/logo_madnews.png" alt="logo"></a>
                         </div>
                     </div>
                     <!-- Header Advert Area -->
@@ -163,7 +163,7 @@
                 </div>
             </div>
         </div>
-        <!-- Bottom Header Area -->
+<!-- Bottom Header Area -->
         <div class="bottom-header">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
@@ -173,36 +173,41 @@
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#gazetteMenu" aria-controls="gazetteMenu" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i> Menu</button>
                                 <div class="collapse navbar-collapse" id="gazetteMenu">
                                     <ul class="navbar-nav mr-auto">
-                                        <li class="nav-item active">
-                                            <a class="nav-link" href="#">Today <span class="sr-only">(current)</span></a>
-                                        </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">目录 Pages</a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                <a class="dropdown-item" href="index.html">Home</a>
-                                                <a class="dropdown-item" href="catagory.html">Catagory</a>
-                                                <a class="dropdown-item" href="single-post.html">Single Post</a>
-                                                <a class="dropdown-item" href="about-us.html">About Us</a>
-                                                <a class="dropdown-item" href="contact.html">Contact</a>
+                                                <a class="dropdown-item" href="../index.html">首页 Home</a>
+                                                <a class="dropdown-item" href="../catagory.html">分类 Category</a>
+                                                <a class="dropdown-item" href="../about-us.html">介绍 About</a>
+                                                <a class="dropdown-item" href="../contact.html">平台 Platform</a>
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">首页 Home</a>
+                                            <a class="nav-link" href="#">政治 Politics</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">介绍 About</a>
+                                            <a class="nav-link" href="#">财经 Business</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">活动 Event</a>
+                                            <a class="nav-link" href="#">教育 Education</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">新闻 News</a>
+                                            <a class="nav-link" href="#">社会 Society</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">文章 Article</a>
+                                            <a class="nav-link" href="#">科技 Tech</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">疫情 Covid</a>
+                                            <a class="nav-link" href="#">体育 Sport</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">娱乐 Entertainment</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">新闻评论 News</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">疫情 Pandemic</a>
                                         </li>
                                     </ul>
                                     <!-- Search Form -->
