Paragraph alignment update

--- a/about-us.html
+++ b/about-us.html
@@ -262,7 +262,7 @@
                         <p>麦迪讯成立于2019年秋季，是一个开放，包容，和谐，奋进的新媒体社团。目前我们社团的公众号关注人数已经达到三千人以上。我们社团成立的初衷是为了服务麦迪逊当地的华人学生，为他们带来本地和国际的要闻。</p>
                     </div>
                     <div><br></br></div>
-                    <div>
+                    <div class="col-12 col-md-12">
                         </h4><b>社长寄语 Message</b></h4>
                         <p style="font-size:16px">朋友，欢迎在寒冷的冬夜敲开麦迪讯的门，这里有温暖的火炉和大群愿意和你促膝谈心的思考者。从这里，一场场观点的交锋，一篇篇犀利的文章将飞向世界的每个角落，在墙内墙外，中国和美国之间的太平洋上架起一道讯息的桥梁。</p>
                         <p style="font-size:16px">麦迪讯通讯社由威斯康辛大学麦迪逊分校的一群中国留学生创建，相比做个纯粹的“做题家”，我们更愿意思考一些问题，比如，在无知的成本越来越低的时代，我们该如何让自己和身边的人冷静地看待这个世界的变化，并且使得这些变化给每个人带来心智上的成熟而不是退化？</p>
