--- a/society/Tokyo_Olympics.html
+++ b/society/Tokyo_Olympics.html
@@ -264,7 +264,7 @@
                         <p style="font-size: 30px"><b>麦迪讯第二十六期</b></p>
                         <h2 class="font-pt">东京奥运，“办还是不办？” 麦迪讯带你了解奥运会背后的政治考量 </h2>
                         <p>February 23, 2021</p>
-                        <p>麦迪讯 2月23日</p>
+                        <p>麦迪讯 2021年2月23日</p>
                     </div>
                 </div>
             </div>
