--- a/sport/Chinese_Women_Football.html
+++ b/sport/Chinese_Women_Football.html
@@ -372,12 +372,9 @@
                         <center>
                             <img src="img/China_CFAWSL2020.jpg" alt="2020中超女足" width="750">
                             <p style="color:grey; line-height: 30px">2020
-                                赛季中国女子超级联赛最终赛果（图源：中国女足微博，2020年10月）</p>
-                            <p style="color:grey; line-height: 20px" >
-                                本届中超女足联赛在云南昆明举行。
-                            第一阶段是十支球队单循环比赛决出排位，</p>
-                            <p style="color:grey; line-height: 20px" >第二阶段是第一阶段的前四名单循环比赛决出冠军、
-                                第一阶段的后六名单循环比赛决出降级球队，</p><p style="color:grey; line-height: 30px" >
+                                赛季中国女子超级联赛最终赛果（图源：中国女足微博，2020年10月）<br />
+                                本届中超女足联赛在云南昆明举行。第一阶段是十支球队单循环比赛决出排位，<br />
+                            第二阶段是第一阶段的前四名单循环比赛决出冠军、 第一阶段的后六名单循环比赛决出降级球队，<br />
                                 最终是武汉车都江大女足夺冠，河北华夏幸福女足降级（消息源：人民体育）。</p>
                         </center>
                     </div>
