--- a/sport/Jiangsu_FC_Stopped.html
+++ b/sport/Jiangsu_FC_Stopped.html
@@ -351,7 +351,7 @@
                                 看作弃子，球队的运营就会陷入动荡。</b>
                             根据苏宁的财报，经过处理，2020 年公司属于上市公司股东的净利润为亏损 42.30 亿人民币（约 6.3 亿美元），
                             同期亏损 44.82 亿人民币（约 6.7 亿美元）。江苏足球俱乐部当下以欠薪为代表的 5 ~ 6 亿人民币
-                            （约 7500 ~ 9000 万美元）的债务，不仅让球迷咋舌，也让球队的潜在接管方望而却步，大大增加了球队解散的风险。
+                            （约 7500 ~ 9000 万美元）的债务，不仅让球迷咋舌，也让球队的潜在接管方望而却步，大大增加了球队解散的风险。</p>
                     </div>
                 </div>
 
