--- a/sport/Chinese_Women_Football.html
+++ b/sport/Chinese_Women_Football.html
@@ -415,9 +415,12 @@
                         <br />
                         <hr />
                         <p ><b style="font-size:30px">往期体育专栏 </b>    作者：冬薯夏瓜</p>
-                        <a href="Jiangsu_FC_Stopped.html" style="color:blue" target="_blank"
-                           title="在新标签页打开另一期体育专栏">
-                            第一期：中超冠军季前停摆，金元足球弊端尽显</a>
+                        <<p><a href="Jiangsu_FC_Stopped.html" style="color:blue" target="_blank"
+                              title="在新标签页打开另一期体育专栏">
+                            第一期：中超冠军季前停摆，金元足球弊端尽显</a></p>
+                        <p><a href="FC_Neutral_Name.html" style="color:blue" target="_blank"
+                              title="在新标签页打开另一期体育专栏">
+                            第二期：“改中性名”风波暂告结束，中国足俱改革长路漫漫</a></p>
                     </div>
                 </div>
 
