--- a/sport/Jiangsu_FC_Stopped.html
+++ b/sport/Jiangsu_FC_Stopped.html
@@ -385,9 +385,13 @@
                         <br />
                         <hr />
                         <p ><b style="font-size:30px">往期体育专栏 </b>    作者：冬薯夏瓜</p>
-                        <a href="Chinese_Women_Football.html" style="color:blue" target="_blank"
+                         <p><a href="FC_Neutral_Name.html" style="color:blue" target="_blank"
+                              title="在新标签页打开另一期体育专栏">
+                            第二期：“改中性名”风波暂告结束，中国足俱改革长路漫漫</a></p>
+                        <p><a href="Chinese_Women_Football.html" style="color:blue"
+                                  target="_blank"
                            title="在新标签页打开另一期体育专栏">
-                            第三期：触目惊心的数据：铿锵玫瑰值得关注，女足联赛更需发展</a>
+                            第三期：触目惊心的数据：铿锵玫瑰值得关注，女足联赛更需发展</a></p>
                     </div>
                 </div>
 
