--- a/sport/Chinese_Women_Football.html
+++ b/sport/Chinese_Women_Football.html
@@ -415,7 +415,7 @@
                         <br />
                         <hr />
                         <p ><b style="font-size:30px">往期体育专栏 </b>    作者：冬薯夏瓜</p>
-                        <<p><a href="Jiangsu_FC_Stopped.html" style="color:blue" target="_blank"
+                        <p><a href="Jiangsu_FC_Stopped.html" style="color:blue" target="_blank"
                               title="在新标签页打开另一期体育专栏">
                             第一期：中超冠军季前停摆，金元足球弊端尽显</a></p>
                         <p><a href="FC_Neutral_Name.html" style="color:blue" target="_blank"
