--- a/society/39_Gansu_Cross-Country_Marathon.html
+++ b/society/39_Gansu_Cross-Country_Marathon.html
@@ -340,7 +340,7 @@
                             <img src="img/Gansu_Cross-Country_Marathon_Scene.png"
                                  alt="甘肃越野马拉松实景"
                                  width="750">
-                            <p style="color: grey; line-height: 30px">可以看到天气已经转阴（图源：新京报）
+                            <p style="color: grey; line-height: 30px">现场可以看到天气已经转阴（图源：新京报）
                             </p>
                         </center>
                     </div>
