members' photo update

--- a/about-us.html
+++ b/about-us.html
@@ -21,6 +21,47 @@
     <!-- Responsive CSS -->
     <link href="css/responsive.css" rel="stylesheet">
 
+	<style type="text/css">
+		.one {
+			position: absolute;
+			width: 500px;
+			height: 400px;
+			overflow: hidden;
+		}
+		.one_cantent img {
+			width: 500px;
+			height: 300px;
+			float: left;
+		}
+		.one_cantent {
+			width: 2500px;
+			height: 400px;
+			position: absolute;
+			left: 0px;
+			animation-name: move;
+			animation-duration: 10s;
+			animation-iteration-count: infinite;
+		}
+		@keyframes move {
+			0% {
+				left: 0px;
+			}
+			25% {
+				left: -500px;
+			}
+			50% {
+				left: -1000px;
+			}
+			75% {
+				left: -1500px;
+			}
+			100% {
+				left: -2000px
+			}
+		}
+	</style>
+
+
 </head>
 
 <body>
@@ -238,7 +279,6 @@
                 <div class="col-12">
                     <div class="breacumb-content d-flex align-items-center justify-content-between">
                         <h3 class="font-pt mb-0">关于我们 About Us</h3>
-                        <p class="editorial-post-date text-dark mb-0">28 November 2017</p>
                     </div>
                 </div>
             </div>
@@ -252,18 +292,26 @@
                 <div class="row">
                     <div class="col-12">
                         <h3 class="font-pt mb-30">社团介绍 Introduction</h3>
+                        <div align="center">
+                            <img src="img/members-img/group2.jpg" alt="" height="650" width="650">
+                        </div>
+                        <p></p>
+                        <p></p>
                     </div>
-                    <div class="col-12 col-md-6">
+                    <p></p>
+                    <div class="col-12 col-md-12">
                     </a><b>概况 Intro</b></a>
-                        <p>随着麦迪讯的发展，我们涉及的领域不断扩大。作为一个不断壮大的新媒体平台，我们现在立志于分享留学生的观点，增进中美年轻人之间的相互理解。现在我们社团已经包含了微信公众号，Facebook，BiliBili，喜马拉雅等平台，并且囊括了麦迪讯，新闻简讯，专栏，读书会等栏目，内容也从时事政治扩大到了金融，文学等领域。</p>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        </h4><b>历史 History</b></h4>
-                        <p>麦迪讯成立于2019年秋季，是一个开放，包容，和谐，奋进的新媒体社团。目前我们社团的公众号关注人数已经达到三千人以上。我们社团成立的初衷是为了服务麦迪逊当地的华人学生，为他们带来本地和国际的要闻。</p>
+                        <p>麦迪讯成立于2019年秋季，是一个开放，包容，和谐，奋进的新媒体社团。目前我们社团的公众号关注人数已经达到三千人以上。我们社团成立的初衷是为了服务麦迪逊当地的华人学生，为他们带来本地和国际的要闻。随着麦迪讯的发展，我们涉及的领域不断扩大。作为一个不断壮大的新媒体平台，我们现在立志于分享留学生的观点，增进中美年轻人之间的相互理解。现在我们社团已经包含了微信公众号，Facebook，BiliBili，喜马拉雅等平台，并且囊括了麦迪讯，新闻简讯，专栏，读书会等栏目，内容也从时事政治扩大到了金融，文学等领域。</p>
                     </div>
                     <div><br></br></div>
                     <div class="col-12 col-md-12">
                         </h4><b>社长寄语 Message</b></h4>
+                        <p></p>
+                        <div align="center">
+                            <img src="img/members-img/group1.jpg" alt="" height="650" width="650">
+                        </div>
+                        <p></p>
+                        <p></p>
                         <p style="font-size:16px">朋友，欢迎在寒冷的冬夜敲开麦迪讯的门，这里有温暖的火炉和大群愿意和你促膝谈心的思考者。从这里，一场场观点的交锋，一篇篇犀利的文章将飞向世界的每个角落，在墙内墙外，中国和美国之间的太平洋上架起一道讯息的桥梁。</p>
                         <p style="font-size:16px">麦迪讯通讯社由威斯康辛大学麦迪逊分校的一群中国留学生创建，相比做个纯粹的“做题家”，我们更愿意思考一些问题，比如，在无知的成本越来越低的时代，我们该如何让自己和身边的人冷静地看待这个世界的变化，并且使得这些变化给每个人带来心智上的成熟而不是退化？</p>
                         <p style="font-size:16px">我们不想停留在感慨的阶段，我们决定办一个小小的通讯社，从报道每天的新闻做起，在实践中去探寻那些宏大问题的答案。渐渐地，开始有人支持我们的事业，我们也不满足于做新闻的搬运工，而是渴望成为思想的传播者，搭建起一个自由的公民讨论平台。</p>
@@ -434,6 +482,50 @@
                                 <h4 class="font-pt">杨雯熙</h4>
                                 <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                     <h5 class="font-pt mb-0">美编、技术</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/xy.jpeg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">奚悦Ivy</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">美编</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/mxr.jpeg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">马晓茹</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">美编</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/penny.jpeg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">赵沛霖Penny</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">编辑</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
+                            <img src="img/members-img/grx.jpeg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">郭瑞萱</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">美编</h5>
                                 </div>
                             </div>
                         </div>
