Politics to DB; Menu and Footer Updated

--- a/politics/the_eighteenth_brumaire_of_donald_trump_2.html
+++ b/politics/the_eighteenth_brumaire_of_donald_trump_2.html
@@ -271,7 +271,7 @@
                     
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p><b>序幕</b></p>
+                            <p><b>阴谋的诞生</b></p>
                             <p>为了挑战对自己不利的选举结果的合法性，<b>特朗普精确地瞄准了美国资本主义民主制度多年累积弊病的薄弱环，那便是两党制与赢家通吃的选举制度</b>。两党对权力的垄断扼杀了任何第三党竞争的机会，并迫使绝大多数选民都只能在两个同样依附于大资产阶级的党派中进行选择。同时，赢家通吃的制度让任何一位候选人只要票数高于竞争对手，无论实际投票率有多低都能赢得选举人票。</p>
                             <p>与此同时，<b>特朗普还注意到了一个选举统计时的有趣现象，并决定以此作为自己败选后攻击选举合法性的核心</b>。在2013年，俄亥俄州立大学的法学教授Edward Foley就发现因为人口稀疏的农村地区通常比人口稠密的城市地区计票更迅速，因此<b>在农村地区有着更高支持率的共和党通常会在计票一开始（选举日结束之前）显出极大的优势，但随着后续城市地区的选票被计算后选举结果会开始向民主党倾斜</b>。因为共和党通常使用红色而民主党采用蓝色，Edward Foley将这种现象命名为“红色蜃楼”（red mirage）或者“蓝移”（blue shift）。而这次的新冠疫情与邮寄选票更是大大加深了这种现象发生的可能性。因为特朗普对新冠疫情的抵赖与刻意忽视，共和党选民可能更倾向于计票更早但有病毒接触风险的选举站投票，而民主党选民更有可能选择邮寄选票。于是乎特朗普在选举开始之前便质疑起了邮寄选票的合法性（即使他自己过去也是用邮寄选票来投票的）。</p>
                             <p>果然，11月3日当天的选举情况的确像特朗普设想的那样发生了，特朗普在几个尚在点票阶段关键州的选举情况领先并在凌晨匆忙地向支持者们宣布胜选。但随后的点票结果却渐渐偏向于民主党，并最终指向了拜登的选举胜利。此时，特朗普精心炮制数月的阴谋论终于上线了，民主党“窃取”了选举结果！<b>对于特朗普导演地这次选举作弊闹剧，共和党的建制派精英们陷入了犹豫</b>。一方面他们震撼于特朗普毫不掩饰的无耻与自恋扯下了美国政治外表上的“文明”面纱，并认为特朗普的阻碍了他们自己追求权力的道路。另一方面他们又不甘于失去特朗普狂热支持者们的选票。于是乎，以Ted Cruz为代表的共和党政客们对特朗普的阴谋论进行着暧昧的支持，并最终令其发酵为1月6日的冲击国会。</p>
