--- a/category.html
+++ b/category.html
@@ -344,57 +344,62 @@
         </div>
     </section>
     <!-- Editorial Area End -->
-
-    <section class="catagory-welcome-post-area section_padding_100">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <!-- Gazette Welcome Post -->
-                    <div class="gazette-welcome-post">
-                        <!-- Post Tag -->
-                        <div class="gazette-post-tag">
-                            <a href="#">Politices</a>
-                        </div>
-                        <h2 class="font-pt">The fine print of Trump's tax talking points</h2>
-                        <p class="gazette-post-date">March 29, 2016</p>
-                        <!-- Post Thumbnail -->
-                        <div class="blog-post-thumbnail my-5">
-                            <img src="img/blog-img/18.jpg" alt="post-thumb">
-                        </div>
-                        <!-- Post Excerpt -->
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend.</p>
-                        <!-- Reading More -->
-                        <div class="post-continue-reading-share mt-30">
-                            <div class="post-continue-btn">
-                                <a href="#" class="font-pt">Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4">
-                    <!-- Gazette Welcome Post -->
-                    <div class="gazette-welcome-post">
-                        <!-- Post Tag -->
-                        <div class="gazette-post-tag">
-                            <a href="#">Politices</a>
-                        </div>
-                        <h2 class="font-pt">Report: Hundreds of EPA employees leave</h2>
-                        <p class="gazette-post-date">March 29, 2016</p>
-                        <!-- Post Thumbnail -->
-                        <div class="blog-post-thumbnail my-5">
-                            <img src="img/blog-img/19.jpg" alt="post-thumb">
-                        </div>
-                        <!-- Post Excerpt -->
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend.</p>
-                        <!-- Reading More -->
-                        <div class="post-continue-reading-share mt-30">
-                            <div class="post-continue-btn">
-                                <a href="#" class="font-pt">Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4">
+<section class="catagory-welcome-post-area section_padding_100">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-4">
+        <!-- Gazette Welcome Post -->
+        <div class="gazette-welcome-post">
+          <!-- Post Tag -->
+          <div class="gazette-post-tag">
+            <a href="#">Politics</a>
+          </div>
+          <h2 class="font-pt">唐纳德·特朗普的雾月一十八日（上）</h2>
+          <p class="gazette-post-date">2021年1月20日</p>
+          <!-- Post Thumbnail -->
+          <div class="blog-post-thumbnail my-5">
+            <img src="politics/img/1_1.jpg" alt="国会">
+            <a href="politics/the_eighteenth_brumaire_of_donald_trump_1.html" style="color:blue"
+               target="_blank"
+               title="在新标签页打开专栏">
+          </div>
+          <!-- Post Excerpt -->
+          <p>自2020年11月起一系列围绕着美国总统大选的闹剧到1月6日发展到了高潮，在现任总统特朗普的鼓吹之下，其支持者展开了对美国国会的冲击。</p>
+          <!-- Reading More -->
+          <div class="post-continue-reading-share mt-30">
+            <div class="post-continue-btn">
+              <a href="#" class="font-pt">Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4">
+        <!-- Gazette Welcome Post -->
+        <div class="gazette-welcome-post">
+          <!-- Post Tag -->
+          <div class="gazette-post-tag">
+            <a href="#">Society</a>
+          </div>
+          <h2 class="font-pt">【社论】年轻人选择“躺平”有罪否？</h2>
+          <p class="gazette-post-date">2021年5月31日</p>
+          <!-- Post Thumbnail -->
+          <div class="blog-post-thumbnail my-5">
+            <img src="society/img/LyingFlat_Stakhanov.png" alt="斯达汉诺夫">
+            <a href="society/40_Lying_Flat.html" style="color:blue"
+               target="_blank"
+               title="在新标签页打开专栏">
+          </div>
+          <!-- Post Excerpt -->
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend.</p>
+          <!-- Reading More -->
+          <div class="post-continue-reading-share mt-30">
+            <div class="post-continue-btn">
+              <a href="#" class="font-pt">Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4">
                     <!-- Gazette Welcome Post -->
                     <div class="gazette-welcome-post">
                         <!-- Post Tag -->
