--- a/category.html
+++ b/category.html
@@ -344,6 +344,7 @@
         </div>
     </section>
     <!-- Editorial Area End -->
+    
 <section class="catagory-welcome-post-area section_padding_100">
   <div class="container">
     <div class="row">
@@ -359,16 +360,15 @@
           <!-- Post Thumbnail -->
           <div class="blog-post-thumbnail my-5">
             <img src="politics/img/1_1.jpg" alt="国会">
-            <a href="politics/the_eighteenth_brumaire_of_donald_trump_1.html" style="color:blue"
-               target="_blank"
-               title="在新标签页打开专栏">
           </div>
           <!-- Post Excerpt -->
           <p>自2020年11月起一系列围绕着美国总统大选的闹剧到1月6日发展到了高潮，在现任总统特朗普的鼓吹之下，其支持者展开了对美国国会的冲击。</p>
           <!-- Reading More -->
           <div class="post-continue-reading-share mt-30">
             <div class="post-continue-btn">
-              <a href="#" class="font-pt">Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+              <a href="politics/the_eighteenth_brumaire_of_donald_trump_1.html" class="font-pt" target="_blank"
+                 title="在新标签页打开专栏">
+              Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -385,20 +385,19 @@
           <!-- Post Thumbnail -->
           <div class="blog-post-thumbnail my-5">
             <img src="society/img/LyingFlat_Stakhanov.png" alt="斯达汉诺夫">
-            <a href="society/40_Lying_Flat.html" style="color:blue"
-               target="_blank"
-               title="在新标签页打开专栏">
           </div>
           <!-- Post Excerpt -->
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend.</p>
+          <p>“躺平”真的是洪水猛兽吗？“躺平”真的会掀起旷工潮吗？它的背后究竟有着什么样的背景呢？</p>
           <!-- Reading More -->
           <div class="post-continue-reading-share mt-30">
             <div class="post-continue-btn">
-              <a href="#" class="font-pt">Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+              <a href="society/40_Lying_Flat.html" class="font-pt" target="_blank"
+                 title="在新标签页打开专栏">Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
       </div>
+      <div class="col-12 col-md-4">
       <div class="col-12 col-md-4">
                     <!-- Gazette Welcome Post -->
                     <div class="gazette-welcome-post">
