--- a/category.html
+++ b/category.html
@@ -359,7 +359,7 @@
           <p class="gazette-post-date">2021年1月20日</p>
           <!-- Post Thumbnail -->
           <div class="blog-post-thumbnail my-5">
-            <img src="politics/img/1_1.jpg" alt="国会">
+            <img src="politics/img/1_1.jpg" alt="国会" style="width:300;height:300">
           </div>
           <!-- Post Excerpt -->
           <p>自2020年11月起一系列围绕着美国总统大选的闹剧到1月6日发展到了高潮，在现任总统特朗普的鼓吹之下，其支持者展开了对美国国会的冲击。</p>
@@ -384,7 +384,7 @@
           <p class="gazette-post-date">2021年5月31日</p>
           <!-- Post Thumbnail -->
           <div class="blog-post-thumbnail my-5">
-            <img src="society/img/LyingFlat_Stakhanov.png" alt="斯达汉诺夫">
+            <img src="society/img/LyingFlat_Stakhanov.png" alt="斯达汉诺夫" style="width:300;height:300">
           </div>
           <!-- Post Excerpt -->
           <p>“躺平”真的是洪水猛兽吗？“躺平”真的会掀起旷工潮吗？它的背后究竟有着什么样的背景呢？</p>
