--- a/category.html
+++ b/category.html
@@ -387,7 +387,7 @@
             <img src="society/img/LyingFlat_Stakhanov.png" alt="斯达汉诺夫" style="width:300;height:300">
           </div>
           <!-- Post Excerpt -->
-          <p>“躺平”真的是洪水猛兽吗？“躺平”真的会掀起旷工潮吗？它的背后究竟有着什么样的背景呢？</p>
+          <p>“躺平”真的是洪水猛兽吗？“躺平”真的会掀起旷工潮吗？它的背后究竟有着什么样的背景呢？<br/></p>
           <!-- Reading More -->
           <div class="post-continue-reading-share mt-30">
             <div class="post-continue-btn">
