--- a/category.html
+++ b/category.html
@@ -404,18 +404,19 @@
                         <div class="gazette-post-tag">
                             <a href="#">Politices</a>
                         </div>
-                        <h2 class="font-pt">Judge throws out ethics case against Trump</h2>
+                        <h2 class="font-pt">触目惊心的数据：铿锵玫瑰值得关注，女足联赛更需发展</h2>
                         <p class="gazette-post-date">March 29, 2016</p>
                         <!-- Post Thumbnail -->
                         <div class="blog-post-thumbnail my-5">
-                            <img src="img/blog-img/20.jpg" alt="post-thumb">
+                            <img src="sport/img/Wang_Shuang.jpg" alt="王霜在比赛中">
                         </div>
                         <!-- Post Excerpt -->
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend.</p>
+                        <p>除非有非市场力量施加影响，市场化的女足行业普遍无法为女球员提供与男球员可比的薪资。而这或许也能为中国女足未来的改革提供一些参考。</p>
                         <!-- Reading More -->
                         <div class="post-continue-reading-share mt-30">
                             <div class="post-continue-btn">
-                                <a href="#" class="font-pt">Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                <a href="sport/Chinese_Women_Football.html" class="font-pt" target="_blank"
+                 title="在新标签页打开专栏">Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
