--- a/category.html
+++ b/category.html
@@ -402,10 +402,10 @@
                     <div class="gazette-welcome-post">
                         <!-- Post Tag -->
                         <div class="gazette-post-tag">
-                            <a href="#">Politices</a>
+                            <a href="#">Sport</a>
                         </div>
                         <h2 class="font-pt">触目惊心的数据：铿锵玫瑰值得关注，女足联赛更需发展</h2>
-                        <p class="gazette-post-date">March 29, 2016</p>
+                        <p class="gazette-post-date">2021年4月17日</p>
                         <!-- Post Thumbnail -->
                         <div class="blog-post-thumbnail my-5">
                             <img src="sport/img/Wang_Shuang.jpg" alt="王霜在比赛中">
