--- a/category.html
+++ b/category.html
@@ -35,12 +35,12 @@
                             <h5 class="breaking-news-title">Breaking news</h5>
                             <div id="breakingNewsTicker" class="ticker">
                                 <ul>
-                                    <li><a href="#">Brexit breakthrough in Brussels comes after week of drama</a></li>
-                                    <li><a href="#">Brexit breakthrough in Brussels</a></li>
-                                    <li><a href="#">Brexit breakthrough in Brussels comes after week of drama</a></li>
-                                    <li><a href="#">Brex comes after week of drama</a></li>
-                                    <li><a href="#">Brexit breakthrough in Bweek of drama</a></li>
-                                    <li><a href="#">Brexit bssels comes after week of drama</a></li>
+                                    <li><a href="#">[2021/6/20]中国累计报告接种新冠疫苗超10亿剂次</a></li>
+                                    <li><a href="#">[2021/6/19]中国塔里木盆地新发现10亿吨超深油气区</a></li>
+                                    <li><a href="#">[2021/6/18]美俄日内瓦峰会结束</a></li>
+                                    <li><a href="#">[2021/6/16]中国神州12号飞船将在6月17日发射升空</a></li>
+                                    <li><a href="#">[2021/6/15]和贝佐斯飞往太空的票价：2800万美元</a></li>
+                                    <li><a href="#">[2021/6/13]欧盟峰会：中国，气候，发展中国家</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -367,8 +367,7 @@
           <div class="post-continue-reading-share mt-30">
             <div class="post-continue-btn">
               <a href="politics/the_eighteenth_brumaire_of_donald_trump_1.html" class="font-pt" target="_blank"
-                 title="在新标签页打开专栏">
-              Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                 title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -392,7 +391,7 @@
           <div class="post-continue-reading-share mt-30">
             <div class="post-continue-btn">
               <a href="society/40_Lying_Flat.html" class="font-pt" target="_blank"
-                 title="在新标签页打开专栏">Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                 title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -416,7 +415,7 @@
                         <div class="post-continue-reading-share mt-30">
                             <div class="post-continue-btn">
                                 <a href="sport/Chinese_Women_Football.html" class="font-pt" target="_blank"
-                 title="在新标签页打开专栏">Continue Reading <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                 title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
