--- a/category.html
+++ b/category.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>TheGazette - News Magazine HTML5 Template | Catagory</title>
+    <title>麦迪讯 HTML5 Template | Catagory</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -32,7 +32,7 @@
                     <!-- Breaking News Area -->
                     <div class="col-12 col-md-6">
                         <div class="breaking-news-area">
-                            <h5 class="breaking-news-title">Breaking news</h5>
+                            <h5 class="breaking-news-title">近日要闻</h5>
                             <div id="breakingNewsTicker" class="ticker">
                                 <ul>
                                     <li><a href="#">[2021/6/20]中国累计报告接种新冠疫苗超10亿剂次</a></li>
